// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-label-info-beta #render should render component as expected (1) 1`] = `
<gux-label-info-beta>
  <!---->
  <gux-icon-tooltip-beta icon-name="fa/circle-info-regular">
    <div slot="content"></div>
  </gux-icon-tooltip-beta>
</gux-label-info-beta>
`;

exports[`gux-label-info-beta #render should render component as expected (2) 1`] = `
<gux-label-info-beta variant="question">
  <!---->
  <gux-icon-tooltip-beta icon-name="fa/circle-question-regular">
    <div slot="content">
      <span slot="content">
        This is some tooltip text
      </span>
    </div>
  </gux-icon-tooltip-beta>
</gux-label-info-beta>
`;

exports[`gux-label-info-beta #render should render component as expected (3) 1`] = `
<gux-label-info-beta variant="info">
  <!---->
  <gux-icon-tooltip-beta icon-name="fa/circle-info-regular">
    <div slot="content"></div>
  </gux-icon-tooltip-beta>
</gux-label-info-beta>
`;

exports[`gux-label-info-beta #render should render component as expected (4) 1`] = `
<gux-label-info-beta>
  <!---->
  <gux-icon-tooltip-beta icon-name="fa/circle-info-regular">
    <div slot="content">
      <span slot="content">
        This is some tooltip text
      </span>
    </div>
  </gux-icon-tooltip-beta>
</gux-label-info-beta>
`;

exports[`gux-label-info-beta #render should render component as expected (5) 1`] = `
<gux-label-info-beta variant="invalid-variant">
  <!---->
  <gux-icon-tooltip-beta icon-name="fa/circle-info-regular">
    <div slot="content">
      <span slot="content">
        This is an information tooltip
      </span>
    </div>
  </gux-icon-tooltip-beta>
</gux-label-info-beta>
`;
